--- a/Component/branches/SobiPro-1.1/Admin/about/en-GB/credits.html
+++ b/Component/branches/SobiPro-1.1/Admin/about/en-GB/credits.html
@@ -1,58 +1,31 @@
 <div style="height: 460px;">
 	<h4 style="margin-bottom: 2px;">The Sobi Team</h4>
 	<ul>
-		<li>
-			<a href="http://sigrid.sigsiu.net/" target="_blank">Sigrid Suski aka Trinity</a><br/>
-            Core Developer, Quality &amp; Testing, Documentation, Translation, Support, Public Relations
-		</li>
-		<li>
-			<a href="http://radek.sigsiu.net/" target="_blank">Radek Suski aka Neo</a><br/>
-            Core Developer, Software Engineering, Support
-		</li>
-		<li>
-			Sławek Sikora aka sikor79<br/>
-            Quality &amp; Testing, Documentation, Support
-		</li>
-		<li>
-            Isidro Baquero aka Isidro<br/>
-            Quality &amp; Testing, Documentation, Support
-		</li>
+		<li><a href="http://sigrid.sigsiu.net/" target="_blank">Sigrid Suski aka Trinity</a><br/>
+            Core Developer, Quality &amp; Testing, Documentation, Translation, Support, Public Relations</li>
+		<li><a href="http://radek.sigsiu.net/" target="_blank">Radek Suski aka Neo</a><br/>
+            Core Developer, Software Engineering, Support</li>
+		<li>Sławek Sikora aka sikor79<br/>
+            Quality &amp; Testing, Documentation, Support</li>
+		<li>Isidro Baquero aka Isidro<br/>
+            Quality &amp; Testing, Documentation, Support</li>
 	</ul>
 
     <h4 style="margin-bottom: 2px;">Icons and graphics used in SobiPro</h4>
 	<ul>
-        <li>
-            <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">Font Awesome</a> by Dave Gandy
-        </li>
-		<li>
-			<a href="http://www.oxygen-icons.org
-			/" target="_blank">Oxygen Icons</a>
-		</li>
-		<li>
-			<a href="http://mediadesign.deviantart.com/" target="_blank">HydroPro Icons</a> by Benjamin Fleming / *MediaDesign
-		</li>
-		<li>
-			<a href="http://tiheum.deviantart.com/" target="_blank">Faenza Icons</a> by Matthieu James
-		</li>
+        <li><a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">Font Awesome</a> by Dave Gandy</li>
+		<li><a href="http://www.oxygen-icons.org/" target="_blank">Oxygen Icons</a></li>
+		<li><a href="http://mediadesign.deviantart.com/" target="_blank">HydroPro Icons</a> by Benjamin Fleming / *MediaDesign</li>
+		<li><a href="http://tiheum.deviantart.com/" target="_blank">Faenza Icons</a> by Matthieu James</li>
 	</ul>
 	
 	<h4 style="margin-bottom: 2px;">Third Party Libraries included in SobiPro</h4>
 	<ul>
-        <li>
-            <a href="http://twitter.github.com/bootstrap/index.html" target="_blank">Bootstrap</a> - UI framework by @mdo and @fat
-        </li>
-		<li>
-			<a href="http://codemirror.net/" target="_blank">CodeMirror</a> - editor by Marijn Haverbeke
-		</li>
-		<li>
-			<a href="http://www.destroydrop.com/javascripts/tree/" target="_blank">dTree</a> by Geir Landrö			
-		</li>
-		<li>
-			<a href="http://jquery.com/" target="_blank">jQuery</a> - JavaScript Library by the jQuery project
-		</li>
-		<li>
-			<a href="http://id.furud.net/" target="_blank">Web Browser Identifier</a> by Marcin Krol 
-		</li>
+        <li><a href="http://twitter.github.com/bootstrap/index.html" target="_blank">Bootstrap</a> - UI framework by @mdo and @fat</li>
+		<li><a href="http://codemirror.net/" target="_blank">CodeMirror</a> - editor by Marijn Haverbeke</li>
+		<li><a href="http://www.destroydrop.com/javascripts/tree/" target="_blank">dTree</a> by Geir Landrö</li>
+		<li><a href="http://jquery.com/" target="_blank">jQuery</a> - JavaScript Library by the jQuery project</li>
+		<li><a href="http://id.furud.net/" target="_blank">Web Browser Identifier</a> by Marcin Krol</li>
 	</ul>
 	<p>Also many thanks to anyone who is involved in the <a href="http://www.joomla.org" target="_blank">Joomla!</a> project for creating this great CMS.</p>
 </div>
