--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -94,6 +94,9 @@ input[type='radio']{
   overflow: hidden \9;
 }
 
+.SobiPro .controls .required {
+  border-color: #7AC6FF;
+}
 
 .SobiPro .breadcrumb {
   padding: 7px 14px;
