--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/edit.less
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/edit.less
@@ -72,7 +72,8 @@
 
 .SigsiuTree .selected {
   float: left;
-  margin-left: 30px;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 .SigsiuTree .selected select {
   min-height: 200px;
@@ -86,6 +87,8 @@
 }
 .SigsiuTree .tree {
   float: left;
+  overflow: auto;
+  width: 50%;
 }
 
 /* Modale Fenster */
