--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -159,6 +159,9 @@ input[type='radio'] {
 #toolbar-box {
   display: none;
 }
+.SobiPro .table th.SpCellHeader {
+  padding-top: 25px;
+}
 .SobiPro .table th.SpCellCenter,
 .SobiPro .table td.SpCellCenter {
   text-align: center;
@@ -831,6 +834,11 @@ input.sp-input-micro[type="text"] {
   margin-left: 0px;
   margin-right: 0px;
   overflow: visible!important;
+}
+/* Styles for Apps */
+.SobiPro .spReviews .icon-desktop,
+.SobiPro .spReviews .icon-dashboard {
+  color: darkblue;
 }
 /* Compatibility Styles */
 .SobiPro table.mceLayout {
