--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
@@ -63,7 +63,7 @@
 }
 
 .sigsiuTree .clip {
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 div.sigsiuTree a,.sigsiuTree a,a.treeNode:hover,a.treeNode,a.treeNode:visited
