--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -187,6 +187,9 @@ input[type='radio']{
   display: none;
 }
 
+.SobiPro .table th.SpCellHeader {
+  padding-top: 25px;
+}
 .SobiPro .table th.SpCellCenter,
 .SobiPro .table td.SpCellCenter {
   text-align: center;
@@ -994,6 +997,13 @@ input.sp-input-micro[type="text"] {
   margin-right: 0px;
   overflow: visible!important;
 }
+
+/* Styles for Apps */
+.SobiPro .spReviews .icon-desktop,
+.SobiPro .spReviews .icon-dashboard {
+  color: darkblue;
+}
+
 
 /* Compatibility Styles */
 
