--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -195,6 +195,11 @@ input[type='radio']{
   text-align: center;
   vertical-align: middle;
 }
+.SobiPro .table th.SpCellMiddle,
+.SobiPro .table td.SpCellMiddle {
+  vertical-align: middle;
+}
+
 .SobiPro .table th.SpCellCenterSmall,
 .SobiPro .table td.SpCellCenterSmall {
   text-align: center;
