--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -465,7 +465,7 @@ fieldset label {
   color: #333333;
   font-size: 110%;
 }
-.SobiPro .SpCellArrow .icon-chevron-down,78
+.SobiPro .SpCellArrow .icon-chevron-down,
 .SobiPro .SpCellArrow .icon-chevron-up {
   color: #6f6f6f;
 }
