Problems with SobiPro icon fonts on frontend of J3 Default teaxtarea width set to 500px (instead of 550)

--- a/Component/branches/SobiPro-1.1/Site/media/less/icons.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/icons.less
@@ -6,13 +6,13 @@
 
 
 /** For Joomla! 3.0 default template */
-.SobiPro [class^="icon-"]::before, [class*=" icon-"]::before {
+.SobiPro [class^="icon-"]::before, .SobiPro [class*=" icon-"]::before {
   font-family: 'FontAwesome';
   font-style: normal;
   speak: none;
   color: inherit;
 }
-.icon-eye:before { content: "\f06e"; }
+.SobiPro .icon-eye:before { content: "\f06e"; }
 
 .SobiPro {
   #ns > .SobiPro;
