(!) Font Awesome updated to version 3.1.0/3.1.1  changelog updated for:    (!) Bootstrap CSS updated to version 2.3.2    (!) JQuery updated to v1.10.1

--- a/Component/branches/SobiPro-1.1/Site/media/less/font-awesome.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/font-awesome.less
@@ -22,3 +22,11 @@
  *  Twitter: http://twitter.com/fortaweso_me
  *  Work: Lead Product Designer @ http://kyruus.com
  */
+
+@import "fontawesome/variables.less";
+@import "fontawesome/mixins.less";
+@import "fontawesome/path.less";
+@import "fontawesome/core.less";
+@import "fontawesome/bootstrap.less";
+@import "fontawesome/extras.less";
+@import "fontawesome/icons.less";
