--- a/Component/branches/SobiPro-1.1/Site/media/less/icons.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/icons.less
@@ -1,9 +1,8 @@
 #ns {
   .SobiPro() {
-  @import "icons.org.less";
+  @import "font-awesome.less";
   }
 }
-
 
 /** For Joomla! 3.0 default template */
 .SobiPro [class^="icon-"]::before, .SobiPro [class*=" icon-"]::before {
