--- a/Component/branches/SobiPro-1.1/Site/media/css/icons.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/icons.css
@@ -11,47 +11,70 @@
 }
 .SobiPro {
   /*!
- *  Font Awesome 3.0.2
- *  the iconic font designed for use with Twitter Bootstrap
+ *  Font Awesome 3.1.0
+ *  the iconic font designed for Bootstrap
  *  -------------------------------------------------------
  *  The full suite of pictographic icons, examples, and documentation
- *  can be found at: http://fortawesome.github.com/Font-Awesome/
+ *  can be found at: http://fontawesome.io
  *
  *  License
  *  -------------------------------------------------------
- *  - The Font Awesome font is licensed under the SIL Open Font License - http://scripts.sil.org/OFL
+ *  - The Font Awesome font is licensed under the SIL Open Font License v1.1 -
+ *    http://scripts.sil.org/OFL
  *  - Font Awesome CSS, LESS, and SASS files are licensed under the MIT License -
  *    http://opensource.org/licenses/mit-license.html
- *  - The Font Awesome pictograms are licensed under the CC BY 3.0 License - http://creativecommons.org/licenses/by/3.0/
+ *  - Font Awesome documentation licensed under CC BY 3.0 License -
+ *    http://creativecommons.org/licenses/by/3.0/
  *  - Attribution is no longer required in Font Awesome 3.0, but much appreciated:
- *    "Font Awesome by Dave Gandy - http://fortawesome.github.com/Font-Awesome"
+ *    "Font Awesome by Dave Gandy - http://fontawesome.io"
 
  *  Contact
  *  -------------------------------------------------------
- *  Email: dave@davegandy.com
+ *  Email: dave@fontawesome.io
  *  Twitter: http://twitter.com/fortaweso_me
  *  Work: Lead Product Designer @ http://kyruus.com
  */
 
-  /*  Font Awesome styles
-    ------------------------------------------------------- */
+  /* FONT PATH
+ * -------------------------- */
 
-  /* more sprites.less reset */
-
-  /* makes sure icons active on rollover in links */
+  /* FONT AWESOME CORE
+ * -------------------------- */
 
   /* makes the font 33% larger relative to the icon container */
 
-  /*  Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
-    readers do not read off random characters that represent icons */
+  /* makes sure icons active on rollover in links */
 
-  /* \f020 doesn't work in Safari. all shifted one down */
+  /* increased font size for icon-large */
+
+  /* BOOTSTRAP SPECIFIC CLASSES
+ * -------------------------- */
+
+  /* Bootstrap 2.0 sprites.less reset */
+
+  /* more sprites.less reset */
+
+  /* keeps Bootstrap styles with and without icons the same */
+
+  /* EXTRAS
+ * -------------------------- */
+
+  /* Stacked and layered icon */
+
+  /* Animated rotating icon */
+
+  /* Icon rotations and mirroring */
+
+  /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
+   readers do not read off random characters that represent icons */
+
+  /* F020 doesn't work in Safari. all shifted one down */
 
 }
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../css/fonts/fontawesome-webfont.eot?v=3.0.1');
-  src: url('../css/fonts/fontawesome-webfont.eot?#iefix&v=3.0.1') format('embedded-opentype'), url('../css/fonts/fontawesome-webfont.woff?v=3.0.1') format('woff'), url('../css/fonts/fontawesome-webfont.ttf?v=3.0.1') format('truetype');
+  src: url('../css/fonts/fontawesome-webfont.eot?v=3.1.0');
+  src: url('../css/fonts/fontawesome-webfont.eot?#iefix&v=3.1.0') format('embedded-opentype'), url('../css/fonts/fontawesome-webfont.woff?v=3.1.0') format('woff'), url('../css/fonts/fontawesome-webfont.ttf?v=3.1.0') format('truetype'), url('../css/fonts/fontawesome-webfont.svg#fontawesomeregular?v=3.1.0') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -62,35 +85,7 @@
   font-style: normal;
   text-decoration: inherit;
   -webkit-font-smoothing: antialiased;
-  /* sprites.less reset */
-
-  display: inline;
-  width: auto;
-  height: auto;
-  /* Sigsiu.NET
-line-height: normal;
-background-image: none;
-background-repeat: repeat;
-*/
-
-  vertical-align: baseline;
-  background-position: 0% 0%;
-  margin-top: 0;
-}
-.SobiPro .icon-white,
-.SobiPro .nav-pills > .active > a > [class^="icon-"],
-.SobiPro .nav-pills > .active > a > [class*=" icon-"],
-.SobiPro .nav-list > .active > a > [class^="icon-"],
-.SobiPro .nav-list > .active > a > [class*=" icon-"],
-.SobiPro .navbar-inverse .nav > .active > a > [class^="icon-"],
-.SobiPro .navbar-inverse .nav > .active > a > [class*=" icon-"],
-.SobiPro .dropdown-menu > li > a:hover > [class^="icon-"],
-.SobiPro .dropdown-menu > li > a:hover > [class*=" icon-"],
-.SobiPro .dropdown-menu > .active > a > [class^="icon-"],
-.SobiPro .dropdown-menu > .active > a > [class*=" icon-"],
-.SobiPro .dropdown-submenu:hover > a > [class^="icon-"],
-.SobiPro .dropdown-submenu:hover > a > [class*=" icon-"] {
-  background-image: none;
+  *margin-right: .3em;
 }
 .SobiPro [class^="icon-"]:before,
 .SobiPro [class*=" icon-"]:before {
@@ -98,80 +93,48 @@ background-repeat: repeat;
   display: inline-block;
   speak: none;
 }
-.SobiPro a [class^="icon-"],
-.SobiPro a [class*=" icon-"] {
-  display: inline-block;
-  text-decoration: none;
-  /* Sigsiu.NET */
-
-}
 .SobiPro .icon-large:before {
   vertical-align: -10%;
   font-size: 1.3333333333333333em;
 }
-.SobiPro .btn [class^="icon-"],
-.SobiPro .nav [class^="icon-"],
-.SobiPro .btn [class*=" icon-"],
-.SobiPro .nav [class*=" icon-"] {
+.SobiPro a [class^="icon-"],
+.SobiPro a [class*=" icon-"],
+.SobiPro a [class^="icon-"]:before,
+.SobiPro a [class*=" icon-"]:before {
   display: inline;
-  /* keeps button heights with and without icons the same */
-
 }
-.SobiPro .btn [class^="icon-"].icon-large,
-.SobiPro .nav [class^="icon-"].icon-large,
-.SobiPro .btn [class*=" icon-"].icon-large,
-.SobiPro .nav [class*=" icon-"].icon-large {
-  line-height: .9em;
-}
-.SobiPro .btn [class^="icon-"].icon-spin,
-.SobiPro .nav [class^="icon-"].icon-spin,
-.SobiPro .btn [class*=" icon-"].icon-spin,
-.SobiPro .nav [class*=" icon-"].icon-spin {
+.SobiPro [class^="icon-"].icon-fixed-width,
+.SobiPro [class*=" icon-"].icon-fixed-width {
   display: inline-block;
-}
-.SobiPro .nav-tabs [class^="icon-"],
-.SobiPro .nav-pills [class^="icon-"],
-.SobiPro .nav-tabs [class*=" icon-"],
-.SobiPro .nav-pills [class*=" icon-"] {
-  /* keeps button heights with and without icons the same */
-
-}
-.SobiPro .nav-tabs [class^="icon-"],
-.SobiPro .nav-pills [class^="icon-"],
-.SobiPro .nav-tabs [class*=" icon-"],
-.SobiPro .nav-pills [class*=" icon-"],
-.SobiPro .nav-tabs [class^="icon-"].icon-large,
-.SobiPro .nav-pills [class^="icon-"].icon-large,
-.SobiPro .nav-tabs [class*=" icon-"].icon-large,
-.SobiPro .nav-pills [class*=" icon-"].icon-large {
-  line-height: .9em;
-}
-.SobiPro li [class^="icon-"],
-.SobiPro .nav li [class^="icon-"],
-.SobiPro li [class*=" icon-"],
-.SobiPro .nav li [class*=" icon-"] {
-  display: inline-block;
-  width: 1.25em;
+  width: 1.2857142857142858em;
   text-align: center;
 }
-.SobiPro li [class^="icon-"].icon-large,
-.SobiPro .nav li [class^="icon-"].icon-large,
-.SobiPro li [class*=" icon-"].icon-large,
-.SobiPro .nav li [class*=" icon-"].icon-large {
-  /* increased font size for icon-large */
-
-  width: 1.5625em;
+.SobiPro [class^="icon-"].icon-fixed-width.icon-large,
+.SobiPro [class*=" icon-"].icon-fixed-width.icon-large {
+  width: 1.5714285714285714em;
 }
-.SobiPro ul.icons {
+.SobiPro ul.icons-ul {
   list-style-type: none;
-  text-indent: -0.75em;
+  text-indent: -0.7142857142857143em;
+  margin-left: 2.142857142857143em;
 }
-.SobiPro ul.icons li [class^="icon-"],
-.SobiPro ul.icons li [class*=" icon-"] {
-  width: .75em;
+.SobiPro ul.icons-ul > li .icon-li {
+  width: 0.7142857142857143em;
+  display: inline-block;
+  text-align: center;
+}
+.SobiPro [class^="icon-"].hide,
+.SobiPro [class*=" icon-"].hide {
+  display: none;
 }
 .SobiPro .icon-muted {
   color: #eeeeee;
+}
+.SobiPro .icon-light {
+  color: #ffffff;
+}
+.SobiPro .icon-dark {
+  color: #333333;
 }
 .SobiPro .icon-border {
   border: solid 1px #eeeeee;
@@ -207,6 +170,15 @@ background-repeat: repeat;
   -moz-border-radius: 6px;
   border-radius: 6px;
 }
+.SobiPro .icon-5x {
+  font-size: 5em;
+}
+.SobiPro .icon-5x.icon-border {
+  border-width: 5px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+}
 .SobiPro .pull-right {
   float: right;
 }
@@ -220,6 +192,58 @@ background-repeat: repeat;
 .SobiPro [class^="icon-"].pull-right,
 .SobiPro [class*=" icon-"].pull-right {
   margin-left: .3em;
+}
+.SobiPro [class^="icon-"],
+.SobiPro [class*=" icon-"] {
+  display: inline;
+  width: auto;
+  height: auto;
+  /* Sigsiu.NET
+  line-height: normal;
+  background-image: none;
+  background-repeat: repeat;
+  */
+
+  vertical-align: baseline;
+  background-position: 0% 0%;
+  margin-top: 0;
+}
+.SobiPro .icon-white,
+.SobiPro .nav-pills > .active > a > [class^="icon-"],
+.SobiPro .nav-pills > .active > a > [class*=" icon-"],
+.SobiPro .nav-list > .active > a > [class^="icon-"],
+.SobiPro .nav-list > .active > a > [class*=" icon-"],
+.SobiPro .navbar-inverse .nav > .active > a > [class^="icon-"],
+.SobiPro .navbar-inverse .nav > .active > a > [class*=" icon-"],
+.SobiPro .dropdown-menu > li > a:hover > [class^="icon-"],
+.SobiPro .dropdown-menu > li > a:hover > [class*=" icon-"],
+.SobiPro .dropdown-menu > .active > a > [class^="icon-"],
+.SobiPro .dropdown-menu > .active > a > [class*=" icon-"],
+.SobiPro .dropdown-submenu:hover > a > [class^="icon-"],
+.SobiPro .dropdown-submenu:hover > a > [class*=" icon-"] {
+  background-image: none;
+}
+.SobiPro .btn [class^="icon-"].icon-large,
+.SobiPro .nav [class^="icon-"].icon-large,
+.SobiPro .btn [class*=" icon-"].icon-large,
+.SobiPro .nav [class*=" icon-"].icon-large {
+  line-height: .9em;
+}
+.SobiPro .btn [class^="icon-"].icon-spin,
+.SobiPro .nav [class^="icon-"].icon-spin,
+.SobiPro .btn [class*=" icon-"].icon-spin,
+.SobiPro .nav [class*=" icon-"].icon-spin {
+  display: inline-block;
+}
+.SobiPro .nav-tabs [class^="icon-"],
+.SobiPro .nav-pills [class^="icon-"],
+.SobiPro .nav-tabs [class*=" icon-"],
+.SobiPro .nav-pills [class*=" icon-"],
+.SobiPro .nav-tabs [class^="icon-"].icon-large,
+.SobiPro .nav-pills [class^="icon-"].icon-large,
+.SobiPro .nav-tabs [class*=" icon-"].icon-large,
+.SobiPro .nav-pills [class*=" icon-"].icon-large {
+  line-height: .9em;
 }
 .SobiPro .btn [class^="icon-"].pull-left.icon-2x,
 .SobiPro .btn [class*=" icon-"].pull-left.icon-2x,
@@ -254,6 +278,29 @@ background-repeat: repeat;
 .SobiPro .btn.btn-large [class^="icon-"].pull-right.icon-2x,
 .SobiPro .btn.btn-large [class*=" icon-"].pull-right.icon-2x {
   margin-left: .2em;
+}
+.SobiPro .icon-stack {
+  position: relative;
+  display: inline-block;
+  width: 2em;
+  height: 2em;
+  line-height: 2em;
+  vertical-align: -35%;
+}
+.SobiPro .icon-stack [class^="icon-"],
+.SobiPro .icon-stack [class*=" icon-"] {
+  display: block;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  font-size: 1em;
+  line-height: inherit;
+  *line-height: 2em;
+}
+.SobiPro .icon-stack .icon-stack-base {
+  font-size: 2em;
+  *line-height: 1em;
 }
 .SobiPro .icon-spin {
   display: inline-block;
@@ -302,19 +349,43 @@ background-repeat: repeat;
     transform: rotate(359deg);
   }
 }
-@-moz-document url-prefix() {
-  .icon-spin {
-    height: .9em;
-  }
-  .btn .icon-spin {
-    height: auto;
-  }
-  .icon-spin.icon-large {
-    height: 1.25em;
-  }
-  .btn .icon-spin.icon-large {
-    height: .75em;
-  }
+.SobiPro .icon-rotate-90:before {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+}
+.SobiPro .icon-rotate-180:before {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
+}
+.SobiPro .icon-rotate-270:before {
+  -webkit-transform: rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+  transform: rotate(270deg);
+  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+.SobiPro .icon-flip-horizontal:before {
+  -webkit-transform: scale(-1, 1);
+  -moz-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  transform: scale(-1, 1);
+}
+.SobiPro .icon-flip-vertical:before {
+  -webkit-transform: scale(1, -1);
+  -moz-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
+  -o-transform: scale(1, -1);
+  transform: scale(1, -1);
 }
 .SobiPro .icon-glass:before {
   content: "\f000";
@@ -403,7 +474,8 @@ background-repeat: repeat;
 .SobiPro .icon-play-circle:before {
   content: "\f01d";
 }
-.SobiPro .icon-repeat:before {
+.SobiPro .icon-repeat:before,
+.SobiPro .icon-rotate-right:before {
   content: "\f01e";
 }
 .SobiPro .icon-refresh:before {
@@ -598,7 +670,8 @@ background-repeat: repeat;
 .SobiPro .icon-arrow-down:before {
   content: "\f063";
 }
-.SobiPro .icon-share-alt:before {
+.SobiPro .icon-share-alt:before,
+.SobiPro .icon-mail-forward:before {
   content: "\f064";
 }
 .SobiPro .icon-resize-full:before {
@@ -916,7 +989,8 @@ background-repeat: repeat;
 .SobiPro .icon-linkedin:before {
   content: "\f0e1";
 }
-.SobiPro .icon-undo:before {
+.SobiPro .icon-undo:before,
+.SobiPro .icon-rotate-left:before {
   content: "\f0e2";
 }
 .SobiPro .icon-legal:before {
@@ -1051,15 +1125,176 @@ background-repeat: repeat;
 .SobiPro .icon-circle:before {
   content: "\f111";
 }
-.SobiPro .icon-reply:before {
+.SobiPro .icon-reply:before,
+.SobiPro .icon-mail-reply:before {
   content: "\f112";
-}
-.SobiPro .icon-github-alt:before {
-  content: "\f113";
 }
 .SobiPro .icon-folder-close-alt:before {
   content: "\f114";
 }
 .SobiPro .icon-folder-open-alt:before {
   content: "\f115";
+}
+.SobiPro .icon-expand-alt:before {
+  content: "\f116";
+}
+.SobiPro .icon-collapse-alt:before {
+  content: "\f117";
+}
+.SobiPro .icon-smile:before {
+  content: "\f118";
+}
+.SobiPro .icon-frown:before {
+  content: "\f119";
+}
+.SobiPro .icon-meh:before {
+  content: "\f11a";
+}
+.SobiPro .icon-gamepad:before {
+  content: "\f11b";
+}
+.SobiPro .icon-keyboard:before {
+  content: "\f11c";
+}
+.SobiPro .icon-flag-alt:before {
+  content: "\f11d";
+}
+.SobiPro .icon-flag-checkered:before {
+  content: "\f11e";
+}
+.SobiPro .icon-terminal:before {
+  content: "\f120";
+}
+.SobiPro .icon-code:before {
+  content: "\f121";
+}
+.SobiPro .icon-reply-all:before {
+  content: "\f122";
+}
+.SobiPro .icon-mail-reply-all:before {
+  content: "\f122";
+}
+.SobiPro .icon-star-half-full:before,
+.SobiPro .icon-star-half-empty:before {
+  content: "\f123";
+}
+.SobiPro .icon-location-arrow:before {
+  content: "\f124";
+}
+.SobiPro .icon-crop:before {
+  content: "\f125";
+}
+.SobiPro .icon-code-fork:before {
+  content: "\f126";
+}
+.SobiPro .icon-unlink:before {
+  content: "\f127";
+}
+.SobiPro .icon-question:before {
+  content: "\f128";
+}
+.SobiPro .icon-info:before {
+  content: "\f129";
+}
+.SobiPro .icon-exclamation:before {
+  content: "\f12a";
+}
+.SobiPro .icon-superscript:before {
+  content: "\f12b";
+}
+.SobiPro .icon-subscript:before {
+  content: "\f12c";
+}
+.SobiPro .icon-eraser:before {
+  content: "\f12d";
+}
+.SobiPro .icon-puzzle-piece:before {
+  content: "\f12e";
+}
+.SobiPro .icon-microphone:before {
+  content: "\f130";
+}
+.SobiPro .icon-microphone-off:before {
+  content: "\f131";
+}
+.SobiPro .icon-shield:before {
+  content: "\f132";
+}
+.SobiPro .icon-calendar-empty:before {
+  content: "\f133";
+}
+.SobiPro .icon-fire-extinguisher:before {
+  content: "\f134";
+}
+.SobiPro .icon-rocket:before {
+  content: "\f135";
+}
+.SobiPro .icon-maxcdn:before {
+  content: "\f136";
+}
+.SobiPro .icon-chevron-sign-left:before {
+  content: "\f137";
+}
+.SobiPro .icon-chevron-sign-right:before {
+  content: "\f138";
+}
+.SobiPro .icon-chevron-sign-up:before {
+  content: "\f139";
+}
+.SobiPro .icon-chevron-sign-down:before {
+  content: "\f13a";
+}
+.SobiPro .icon-html5:before {
+  content: "\f13b";
+}
+.SobiPro .icon-css3:before {
+  content: "\f13c";
+}
+.SobiPro .icon-anchor:before {
+  content: "\f13d";
+}
+.SobiPro .icon-unlock-alt:before {
+  content: "\f13e";
+}
+.SobiPro .icon-bullseye:before {
+  content: "\f140";
+}
+.SobiPro .icon-ellipsis-horizontal:before {
+  content: "\f141";
+}
+.SobiPro .icon-ellipsis-vertical:before {
+  content: "\f142";
+}
+.SobiPro .icon-rss-sign:before {
+  content: "\f143";
+}
+.SobiPro .icon-play-sign:before {
+  content: "\f144";
+}
+.SobiPro .icon-ticket:before {
+  content: "\f145";
+}
+.SobiPro .icon-minus-sign-alt:before {
+  content: "\f146";
+}
+.SobiPro .icon-check-minus:before {
+  content: "\f147";
+}
+.SobiPro .icon-level-up:before {
+  content: "\f148";
+}
+.SobiPro .icon-level-down:before {
+  content: "\f149";
+}
+.SobiPro .icon-check-sign:before {
+  content: "\f14a";
+}
+.SobiPro .icon-edit-sign:before {
+  content: "\f14b";
+}
+.SobiPro .icon-external-link-sign:before {
+  content: "\f14c";
+}
+.SobiPro .icon-share-sign:before {
+  content: "\f14d";
 }
