--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -1009,6 +1009,15 @@ input.sp-input-micro[type="text"] {
   color: darkblue;
 }
 
+/* Changes to work with Bootstrap CSS v2.3.2 */
+.SobiPro .dropdown-menu li > a {
+  padding-bottom: 3px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 3px;
+  white-space: nowrap;
+}
+
 
 /* Compatibility Styles */
 
