--- a/Component/branches/SobiPro-1.1/Site/media/less/fontawesome/core.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/fontawesome/core.less
@@ -28,7 +28,9 @@
 a {
   [class^="icon-"],
   [class*=" icon-"] {
-    &, &:before { display: inline; }
+    //Sigsiu.NET
+    &, &:before { display: inline-block;
+      text-decoration: none; }
   }
 }
 
