Larger CSS files are minimised now

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/menu.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/menu.css
@@ -1,82 +1,1 @@
-/**
- * @version: $Id$
- * @package: SobiPro Component for Joomla!
-
- * @author
- * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
- * Email: sobi[at]sigsiu.net
- * Url: http://www.Sigsiu.NET
-
- * @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
- * @license GNU/GPL Version 3
- * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
- * See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
-
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
- * $Date$
- * $Revision$
- * $Author$
- * $HeadURL$
- */
-#SpMenu .accordion-inner {
-  min-height: 200px;
-}
-div.SPcontentTabHeader a {
-  color: #0b55c4;
-  text-decoration: none;
-  font-weight: bold;
-}
-div.SPcontentTabHeader a:hover {
-  text-decoration: underline;
-}
-#SPMenuCtrl {
-  margin: 5px;
-}
-#SPRightMenuHold {
-  margin-top: 52px;
-  margin-left: -15px;
-  margin-bottom: 9px;
-  position: absolute;
-}
-#SPMenuCtrl {
-  position: absolute;
-  margin-left: 0px;
-  margin-top: 0px;
-}
-#SPaccordionTabs .well {
-  margin-bottom: 0;
-}
-#SPaccordionTabs .accordion-heading .accordion-toggle {
-  padding: 8px 10px;
-}
-#SPaccordionTabs a {
-  color: #555555;
-}
-#SPaccordionTabs a:hover {
-  background-color: #eeeeee;
-  color: #333333;
-  text-decoration: none;
-}
-#SPaccordionTabs ul,
-#spaccordiontabs ol {
-  margin: 0 0 10px 2px;
-  list-style: none;
-  font-size: 13px;
-}
-#SPRightMenu .brand a {
-  color: #7f7f7f;
-}
-#SPaccordionTabs li a {
-  display: block;
-  padding: 3px 5px;
-  margin-left: -7px;
-  margin-right: -7px;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  color: #555555;
-}
-#SPaccordionTabs a.SPMenuActive {
-  background-color: #993333;
-  color: #ffffff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
-}
+#SpMenu .accordion-inner{min-height:200px}div.SPcontentTabHeader a{color:#0b55c4;text-decoration:none;font-weight:bold}div.SPcontentTabHeader a:hover{text-decoration:underline}#SPMenuCtrl{margin:5px}#SPRightMenuHold{margin-top:52px;margin-left:-15px;margin-bottom:9px;position:absolute}#SPMenuCtrl{position:absolute;margin-left:0;margin-top:0}#SPaccordionTabs .well{margin-bottom:0}#SPaccordionTabs .accordion-heading .accordion-toggle{padding:8px 10px}#SPaccordionTabs a{color:#555}#SPaccordionTabs a:hover{background-color:#eee;color:#333;text-decoration:none}#SPaccordionTabs ul,#spaccordiontabs ol{margin:0 0 10px 2px;list-style:none;font-size:13px}#SPRightMenu .brand a{color:#7f7f7f}#SPaccordionTabs li a{display:block;padding:3px 5px;margin-left:-7px;margin-right:-7px;text-shadow:0 1px 0 rgba(255,255,255,0.5);color:#555}#SPaccordionTabs a.SPMenuActive{background-color:#933;color:#fff;text-shadow:0 -1px 0 rgba(0,0,0,0.2)}
