--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -837,7 +837,8 @@ input.sp-input-micro[type="text"] {
 #SobiProPanel .accordion-heading a {
   color: #555555;
 }
-#SobiProPanel .accordion-heading a:hover {
+#SobiProPanel .accordion-heading a:hover,
+#SobiProPanel .accordion-heading a:focus {
   background-color: #eeeeee;
   color: @font;
   text-decoration: none;
