(#) fixed width of file upload progress bar and message removed    (#) CSS tweaks for URL field

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -930,6 +930,7 @@ input.sp-input-micro[type="text"] {
 
 .spFieldUrl {
   display: block;
+  margin-top: 5px;
 }
 
 .spFieldUrl select {
@@ -940,6 +941,18 @@ input.sp-input-micro[type="text"] {
 .spFieldRadio,
 .spFieldCheckbox {
   float: left;
+}
+
+.spFileUpload .alert {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-bottom: 0;
+  width: 400px;
+  margin-top: 5px;
+}
+
+.spFileUpload .progress {
+  width: 400px;
 }
 
 .spFieldCheckbox label {
@@ -966,12 +979,6 @@ input.sp-input-micro[type="text"] {
   margin-left: 5px !important;
   margin-right: 5px !important;
   float: left;
-}
-
-.spFileUpload .alert {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-bottom: 0;
 }
 
 .SigsiuTree .selected {
