--- a/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
@@ -52,6 +52,7 @@
 .SobiPro .btn .caret {
   margin-bottom: 9px;
 }
+/* Edit an Entry base styles */
 .SobiPro .SPEntryEdit .required {
   border-color: #7ac6ff;
 }
@@ -59,13 +60,18 @@
   margin-right: 10px;
   margin-top: 17px;
 }
-.SobiPro div#sobiProFooter,
-.SobiPro div#sobiProFooter a {
-  color: #999999;
-  font-size: 9px;
-  padding-top: 10px;
-  text-decoration: none;
+.SobiPro .SPEntryEdit .alert {
+  margin-bottom: 0;
+  margin-top: 10px;
 }
+.SobiPro .SPEntryEdit .progress {
+  min-width: 100px;
+  width: 50%;
+}
+.SobiPro .SPEntryEdit .message-lightbulb {
+  margin-left: 15px;
+}
+/* Alpha Index */
 .SobiPro #alpha-index .pagination {
   margin-top: 5px;
 }
@@ -74,6 +80,13 @@
 }
 .SobiPro .alphalist .dropdown-menu {
   text-align: left;
+}
+.SobiPro div#sobiProFooter,
+.SobiPro div#sobiProFooter a {
+  color: #999999;
+  font-size: 9px;
+  padding-top: 10px;
+  text-decoration: none;
 }
 .SobiPro table.payment td {
   line-height: 10px;
