(#) XMLCall error fixed

--- a/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
@@ -29,6 +29,10 @@
   top: 50%;
 }
 
+.SobiPro .modal.fade.in {
+	top: 50%;
+}
+
 .SobiPro .popover-inner .spclose {
   padding-right: 8px;
   padding-top: 5px;
