--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/tabs.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/tabs.css
@@ -36,7 +36,7 @@
 .dynamic-tab-pane-control .tab-row .tab {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	cursor: Default;
+	cursor: default;
 	display: inline;
 	margin: 1px -5px 1px 5px;
 	float: left;
