icon style correction

--- a/Component/branches/SobiPro-1.1/Site/media/less/fontawesome/bootstrap.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/fontawesome/bootstrap.less
@@ -7,11 +7,16 @@
   display: inline;
   width: auto;
   height: auto;
-  /* Sigsiu.NET
+  /* Sigsiu.NET Anfang
   line-height: normal;
   background-image: none;
   background-repeat: repeat;
   */
+
+  line-height: inherit;
+
+  /* Sigsiu.NET Ende */
+
   vertical-align: baseline;
   background-position: 0% 0%;
   margin-top: 0;
