style correction for J3 backend. J template overwrites our Bootstrap style.

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -597,6 +597,10 @@ fieldset label {
   margin-bottom: 0px;
 }
 
+.SobiPro .form-horizontal .control-label {
+  padding-right: 0px;
+}
+
 #SPAdminForm .SpSoap fieldset .control-label {
   width: 140px;
 }
