--- a/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
@@ -1,113 +1,1 @@
-/**
- * @version: $Id$
- * @package: SobiPro Component for Joomla!
-
- * @author
- * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
- * Email: sobi[at]sigsiu.net
- * Url: http://www.Sigsiu.NET
-
- * @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
- * @license GNU/GPL Version 3
- * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
- * as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
- * See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
-
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
- * $Date$
- * $Revision$
- * $Author$
- */
-.SobiPro div.modal {
-  width: 520px;
-  margin: -250px 0 0 -280px;
-  top: 50%;
-}
-.SobiPro .modal.fade.in {
-  top: 50%;
-}
-.SobiPro .popover-inner .spclose {
-  padding-right: 8px;
-  padding-top: 5px;
-  font-size: 15px;
-}
-.SobiPro .input-splarge {
-  width: 400px;
-}
-.SobiPro .thumbnail {
-  margin-bottom: 9px;
-}
-.SobiPro div.thumbcat {
-  border: none;
-  box-shadow: 0 0 0 0;
-  display: block;
-  line-height: 20px;
-  padding: 4px;
-}
-.SobiPro p.thumbcat {
-  margin: 0;
-}
-.SobiPro .category-container,
-.SobiPro .entry-container {
-  margin-bottom: 15px;
-  margin-top: 5px;
-}
-.SobiPro .btn .caret {
-  margin-bottom: 9px;
-}
-/* Edit an Entry base styles */
-.SobiPro .SPEntryEdit .required {
-  border-color: #7ac6ff;
-}
-.SobiPro .SPDetailEntry .pull-left {
-  margin-right: 10px;
-  margin-top: 17px;
-}
-.SobiPro .SPEntryEdit .alert {
-  margin-bottom: 0;
-  margin-top: 10px;
-}
-.SobiPro .SPEntryEdit .progress {
-  min-width: 100px;
-  width: 50%;
-}
-.SobiPro .SPEntryEdit .message-lightbulb {
-  margin-left: 15px;
-}
-/* Alpha Index */
-.SobiPro #alpha-index .pagination {
-  margin-top: 5px;
-}
-.SobiPro .alphalist {
-  text-align: right;
-}
-.SobiPro .alphalist .dropdown-menu {
-  text-align: left;
-}
-.SobiPro div#sobiProFooter,
-.SobiPro div#sobiProFooter a {
-  color: #999999;
-  font-size: 9px;
-  padding-top: 10px;
-  text-decoration: none;
-}
-.SobiPro table.payment td {
-  line-height: 10px;
-}
-.SobiPro table tr.summary td {
-  background-color: #ffffff;
-  padding-top: 25px;
-}
-.SobiPro table tr.sum td {
-  font-weight: bold;
-}
-.SPSearchSelectRangeTo,
-.SPSearchSelectRangeFrom {
-  padding-bottom: 3px;
-  padding-top: 3px;
-}
-.SobiPro .hide {
-  display: none;
-}
+.SobiPro div.modal{width:520px;margin:-250px 0 0 -280px;top:50%}.SobiPro .modal.fade.in{top:50%}.SobiPro .popover-inner .spclose{padding-right:8px;padding-top:5px;font-size:15px}.SobiPro .input-splarge{width:400px}.SobiPro .thumbnail{margin-bottom:9px}.SobiPro div.thumbcat{border:0;box-shadow:0;display:block;line-height:20px;padding:4px}.SobiPro p.thumbcat{margin:0}.SobiPro .category-container,.SobiPro .entry-container{margin-bottom:15px;margin-top:5px}.SobiPro .btn .caret{margin-bottom:9px}.SobiPro .SPEntryEdit .required{border-color:#7ac6ff}.SobiPro .SPDetailEntry .pull-left{margin-right:10px;margin-top:17px}.SobiPro .SPEntryEdit .alert{margin-bottom:0;margin-top:10px}.SobiPro .SPEntryEdit .progress{min-width:100px;width:50%}.SobiPro .SPEntryEdit .message-lightbulb{margin-left:15px}.SobiPro #alpha-index .pagination{margin-top:5px}.SobiPro .alphalist{text-align:right}.SobiPro .alphalist .dropdown-menu{text-align:left}.SobiPro div#sobiProFooter,.SobiPro div#sobiProFooter a{color:#999;font-size:9px;padding-top:10px;text-decoration:none}.SobiPro table.payment td{line-height:10px}.SobiPro table tr.summary td{background-color:#fff;padding-top:25px}.SobiPro table tr.sum td{font-weight:bold}.SPSearchSelectRangeTo,.SPSearchSelectRangeFrom{padding-bottom:3px;padding-top:3px}.SobiPro .hide{display:none}
