(!) Style revisions to default2 template and SobiPro frontend CSS

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -72,6 +72,10 @@ body.contentpane a {
 .SobiPro .modal-body {
   max-height: 420px;
 }
+.SobiPro .modal-body .btn {
+  margin-bottom: 10px;
+}
+
 #spIco .modal-body {
   padding: 0;
 }
