--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.less
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.less
@@ -70,6 +70,10 @@
 .SPDetailEntry {
   padding: 10px;
 }
+.SPDetailEntry .spManage {
+  margin-right: 10px;
+  margin-top: 17px;
+}
 
 /* Individual Styling, please adapt if you change field names */
 .field_country,
