--- a/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
@@ -70,11 +70,8 @@
 .SobiPro .SPEntryEdit .required {
   border-color: #7ac6ff;
 }
-.SobiPro .SPDetailEntry .pull-left {
-  margin-right: 10px;
-  margin-top: 17px;
-}
-.SobiPro .SPEntryEdit .alert {
+
+.SobiPro .SPEntryEdit .spAlert {
   margin-bottom: 0;
   margin-top: 10px;
 }
@@ -85,6 +82,7 @@
 .SobiPro .SPEntryEdit .message-lightbulb {
   margin-left: 15px;
 }
+
 
 /* Alpha Index */
 .SobiPro #alpha-index .pagination {
