--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.css
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.css
@@ -67,6 +67,10 @@
 .SPDetailEntry {
   padding: 10px;
 }
+.SPDetailEntry .spManage {
+  margin-right: 10px;
+  margin-top: 17px;
+}
 /* Individual Styling, please adapt if you change field names */
 .field_country,
 .field_fax,
