SobiPro menu CSS link color was overwritten in J1.5

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/menu.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/menu.less
@@ -20,10 +20,6 @@
  */
 
 
-#SpMenu .accordion-inner {
-    min-height: 200px;
-}
-
 div.SPcontentTabHeader a {
     color: #0b55c4;
     text-decoration: none;
@@ -63,6 +59,15 @@ div.menuTreeSigsiuTree {
     padding: 8px 10px;
 }
 
+#SpMenu .accordion-inner {
+  min-height: 200px;
+}
+
+#SPRightMenu .brand a {
+  color: #7f7f7f;
+}
+
+#SPaccordionTabs a:link,
 .accordion a {
     color: #555555;
 }
@@ -81,10 +86,6 @@ div.menuTreeSigsiuTree {
     margin: 0 0 10px 2px;
     list-style: none;
     font-size: 13px;
-}
-
-#SPRightMenu .brand a {
-    color: #7f7f7f;
 }
 
 .accordion li a {
