--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.css
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.css
@@ -78,3 +78,12 @@
 .field_business_days {
   padding-bottom: 10px;
 }
+.entry-status {
+	font-size: 15px;
+	color: #a90000;
+	padding: 5px;
+}
+.popover {
+	font-size: 13px;
+	line-height: 13px;
+}
