Style corrections for backend menu and input boxes (profile field)

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/menu.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/menu.less
@@ -67,7 +67,7 @@ div.menuTreeSigsiuTree {
   color: #7f7f7f;
 }
 
-#SPaccordionTabs a:link,
+.SPmenuTabs a:link,
 .accordion a {
     color: #555555;
 }
