--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -538,6 +538,9 @@ fieldset label {
 #SPAdminForm .uneditable-input {
   color: #666666;
 }
+#SPAdminForm input {
+  float: none;
+}
 
 .SobiPro .SpCellCenter input[type="text"] {
   margin-bottom: 0px;
