(!) Default input style for URL and Email field improved

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -928,17 +928,14 @@ input.sp-input-micro[type="text"] {
 
 .spFieldUrlLabel,
 .spFieldEmailLabel {
-  display: block;
-  height: 40px;
 }
 
 .spFieldUrlLabel label,
 .spFieldEmailLabel label,
 .spFieldEmail label {
-  padding-right: 5px;
   color: #666666;
-  margin-top: 5px;
-  float: left;
+  margin-top: 7px;
+  float: none;
 }
 
 .spFieldUrl {
