(!) Default input style for URL and Email field improved/2

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -532,14 +532,17 @@ fieldset label {
   color: #6699ff !important;
 }
 
-#SPAdminForm input,
-#SPAdminForm textarea,
-#SPAdminForm select,
-#SPAdminForm .uneditable-input {
+.SobiPro .controls input,
+.SobiPro .controls textarea,
+.SobiPro .controls select,
+.SobiPro .controls .uneditable-input {
   color: #666666;
 }
-#SPAdminForm input {
+.SobiPro .controls input {
   float: none;
+}
+.SobiPro .spFileUpload input {
+  float: left;
 }
 
 .SobiPro .SpCellCenter input[type="text"] {
