tree CSS, especially for modules

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
@@ -71,11 +71,15 @@ a.treeNode:visited {
 	text-decoration: none;
 	font-weight: normal;
 }
+a.treeNode:hover {
+    background-color: #EEEEEE;
+}
 
 a.treeNode:active,
 a.treeNode:focus {
 	color: #333333;
 	text-decoration: none;
 	font-weight: normal;
+    background-color: #C0D2EC;
 /*	background-color: #c0d2ec; */
 }
