sp 1.1.3 history/reject layout und text

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -74,7 +74,7 @@ body.contentpane a {
   max-height: 420px;
 }
 .SobiPro .modal-body .btn {
-  margin-bottom: 10px;
+  /*margin-bottom: 10px;*/
 }
 
 #spIco .modal-body {
@@ -450,6 +450,7 @@ fieldset label {
   text-decoration: none;
 }
 
+.SobiPro .btn-danger,
 .SobiPro .btn-sobipro {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -665,6 +666,17 @@ fieldset label {
   color: #ffffff;
   text-align: center;
   background-color: #000066;
+}
+
+.SobiPro .SpExtName .tooltip-inner {
+  min-width: 350px;
+  color: #202020;
+  background-color: #eeeeee;
+}
+
+.SobiPro .SpExtName .tooltip.in {
+  opacity: 0.9;
+  filter: alpha(opacity=90);
 }
 
 .SobiPro .tooltip.top .tooltip-arrow {
