--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/form-responsive.css
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/form-responsive.css
@@ -1,5 +1,5 @@
 /**
- * @version: $Id: search.less 3491 2013-06-28 08:17:57Z Sigrid Suski $
+ * @version: $Id$
  * @package: SobiPro Component for Joomla!
 
  * @author
@@ -16,9 +16,9 @@
  * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
- * $Date: 2013-12-03, 19:19:06 +0100 $
+ * $Date$
  *
- * $Author: www.sobitemplates.com [by Krzysztof Wacławiak] $
+ * $Author$
  */
 .SobiPro .form-horizontal .SPtagsinput,
 .SobiPro .form-horizontal input[type="text"],
