(#) Changed timestamp getter from integer to double to avoid problems on old 32 bit systems (Issue #1143)     (#) Removed short open tag in the administrator/components/com_sobipro/default.php file (Issue #1141)

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/form-responsive.css
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/form-responsive.css
@@ -25,7 +25,7 @@
 .SobiPro .form-horizontal textarea,
 .SobiPro .form-horizontal select {
   box-sizing: border-box;
-  /*min-height: 30px;*/
+  min-height: 30px;
   max-width: 100%;
 }
 @media (max-width: 599px) {
