--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -7,7 +7,7 @@
  * Email: sobi[at]sigsiu.net
  * Url: http://www.Sigsiu.NET
 
- * @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @copyright Copyright (C) 2006 - 2014 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
  * @license GNU/GPL Version 3
  * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
  * as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -540,7 +540,7 @@ fieldset label {
   color: #666666;
 }
 .SobiPro .controls input {
-  float: none;
+/*  float: none;  macht mehr kaputt als es hilft */
 }
 .SobiPro .spFileUpload input {
   float: left;
@@ -753,6 +753,7 @@ fieldset label {
 }
 .SobiPro .SpCellNewsContent {
   padding-top: 5px;
+  padding-left: 10px;
 }
 .SobiPro .spNews .SpCellContainer {
   background-color: #f7f7f7;
@@ -765,7 +766,6 @@ fieldset label {
 }
 .SobiPro .spNews .SpCellContainer img {
   padding-right: 10px;
-  padding-left: 10px;
 }
 .SobiPro td.SpCellIssueMsg {
   padding-top: 11px;
@@ -925,6 +925,11 @@ input.sp-input-micro[type="text"] {
 
 .spicon-48-SobiUser {
   background-image: url('@{admIcons}/sobipro-acl-edit.png');
+}
+
+.SobiPro .spDatePicker .add-on,
+.SobiPro .spUserSelector .add-on {
+  background-color: #FFFFFF;
 }
 
 .spUserSelector .response .btn {
