--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/edit.less
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/edit.less
@@ -104,3 +104,9 @@
   top: 0;
   z-index: 1040;
 }
+
+.SobiPro .SPEntryEdit div.required {
+	border: 1px solid #7ac6ff;
+	border-radius: 4px;
+	padding: 2px;
+}
