--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/less/default.less
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/less/default.less
@@ -61,8 +61,6 @@
   margin: inherit;
 }
 /* end Joomla! 2.5 template compatibility */
-
-
 /* General Styling */
 .SPDetailEntry h1 {
   font-size: 28px;
@@ -74,11 +72,19 @@
   margin-right: 10px;
   margin-top: 17px;
 }
-
 /* Individual Styling, please adapt if you change field names */
 .field_country,
 .field_fax,
 .field_website,
 .field_business_days {
   padding-bottom: 10px;
+}
+.entry-status {
+  font-size: 15px;
+  color: #a90000;
+  padding: 5px;
+}
+.popover {
+  font-size: 13px;
+  line-height: 13px;
 }
