--- a/Component/branches/SobiPro-1.1/Site/media/less/fontawesome/bootstrap.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/fontawesome/bootstrap.less
@@ -7,18 +7,11 @@
   display: inline;
   width: auto;
   height: auto;
-  /* Sigsiu.NET Anfang
   line-height: normal;
-  background-image: none;
-  background-repeat: repeat;
-  */
-
-  line-height: inherit;
-
-  /* Sigsiu.NET Ende */
-
   vertical-align: baseline;
+  background-image: none;
   background-position: 0% 0%;
+  background-repeat: repeat;
   margin-top: 0;
 }
 
@@ -82,4 +75,10 @@
     &.pull-left.icon-2x { margin-right: .2em; }
     &.pull-right.icon-2x { margin-left: .2em; }
   }
+}
+
+/* Fixes alignment in nav lists */
+.nav-list [class^="icon-"],
+.nav-list [class*=" icon-"] {
+  line-height: inherit;
 }
