(!) Font Awesome updated to version 3.2.1, correction     some icons improved

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -581,6 +581,7 @@ fieldset label {
 }
 
 .SobiPro .SpCellCenter .icon-money,
+.SobiPro .SpCellCenter .icon-dollar,
 .SobiPro .SpCellCenter .icon-check-empty,
 .SobiPro .SpCellCenter .icon-lock,
 .SobiPro .SpCellCenter .icon-thumbs-down {
