--- a/Component/branches/SobiPro-1.1/Site/media/less/fontawesome/bootstrap.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/fontawesome/bootstrap.less
@@ -7,11 +7,18 @@
   display: inline;
   width: auto;
   height: auto;
+  /* Sigsiu.NET Anfang
   line-height: normal;
-  vertical-align: baseline;
   background-image: none;
-  background-position: 0% 0%;
   background-repeat: repeat;
+  */
+
+  line-height: inherit;
+
+  /* Sigsiu.NET Ende */
+
+  vertical-align: baseline;
+  background-position: 0% 0%;
   margin-top: 0;
 }
 
