(!) CSS style for alert messages

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -438,6 +438,11 @@ fieldset label {
 /*color: #ffffff; suchen wo benötigt und detaillierter lösen!!*/
 }
 
+.SobiPro .input-prepend .alert,
+.SobiPro .input-append .alert {
+  font-size: 14px;
+}
+
 .SobiPro .brand {
   color: #7f7f7f;
   font-size: 9px;
