datepicker CSS file corrected, LESS file removed, Styles for cursor added

--- a/Component/branches/SobiPro-1.1/Site/media/css/bootstrap/datepicker.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/bootstrap/datepicker.css
@@ -1,4 +1,4 @@
-SobiPro .clearfix {
+.SobiPro .clearfix {
 	*zoom: 1
 }
 
@@ -287,3 +287,9 @@ SobiPro .clearfix {
 	font-size: 20px;
 	color: #08c;
 }
+
+.SobiPro .ctrl-set-now,
+.SobiPro .ctrl-reset-date {
+    cursor: pointer;
+}
+
