(!) Some icons in administration panel improved (datepicker)

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -936,6 +936,7 @@ input.sp-input-micro[type="text"] {
 .SobiPro .spDatePicker .add-on,
 .SobiPro .spUserSelector .add-on {
   background-color: #FFFFFF;
+  cursor: pointer;
 }
 
 .spUserSelector .response .btn {
