(#) SigsiuTree, category field: Disabled possibility to select (click) additional category as long the previous wasn't added (Issue #1347)

--- a/Site/media/css/sobipro.css
+++ b/Site/media/css/sobipro.css
@@ -134,7 +134,6 @@
 
 .SobiPro .spdFileUpload .alert,
 .SobiPro .spImageUpload .alert {
-	/*max-width: 40%;*/
 	margin-top: 5px;
 }
 
@@ -144,4 +143,12 @@
 
 .SobiPro .spImageField label {
 	display: inline-block;
+}
+
+.SobiPro .disabledArea {
+	opacity: 0.3;
+	cursor:progress;
+}
+.SobiPro .disabledArea a {
+	cursor:progress;
 }
