--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -1095,3 +1095,10 @@ input.sp-input-micro[type="text"] {
   border-radius: 3px;
 }
 
+.SobiPro .spImageField .span2 {
+  width: 80px;
+}
+
+.SobiPro .spImageField label {
+  display: inline-block;
+}
