Less files corrected and css files created

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -1092,7 +1092,41 @@ input.sp-input-micro[type="text"] {
 
 /* Aggregation Field */
 .SPtagsinput {
-  border-radius: 3px;
+	border-radius: 3px
+}
+
+.SobiPro .spdFileUpload .span1,
+.SobiPro .spImageUpload .span1 {
+	padding: 8px;
+	margin-left: 10px;
+	min-width: 60px;
+}
+
+.SobiPro .spdFileUpload .progress-message,
+.SobiPro .spImageUpload .progress-message {
+	margin-top: 10px;
+	margin-left: 20px;
+	clear:left;
+}
+
+.SobiPro .spImageUpload .progress-message {
+	margin-top: 15px;
+	margin-left: 10px;
+}
+
+.SobiPro .spEditImagePreview img {
+	margin: 8px;
+}
+
+.SobiPro .spImageField input[type='checkbox'] {
+	margin: 5px;
+	margin-top: 10px;
+}
+
+.SobiPro .spdFileUpload .alert,
+.SobiPro .spImageUpload .alert {
+	/*max-width: 40%;*/
+	margin-top: 5px;
 }
 
 .SobiPro .spImageField .span2 {
