--- a/Site/media/less/sobipro.less
+++ b/Site/media/less/sobipro.less
@@ -128,3 +128,50 @@
 .SobiPro .input-append .alert {
   font-size: 14px;
 }
+
+
+.SobiPro .spdFileUpload .span1,
+.SobiPro .spImageUpload .span1 {
+	margin-left: 10px;
+}
+
+.SobiPro .spdFileUpload .progress-message,
+.SobiPro .spImageUpload .progress-message {
+	margin-top: 10px;
+	margin-left: 20px;
+	clear:left;
+}
+
+.SobiPro .spImageUpload .progress-message {
+	margin-top: 15px;
+	margin-left: 10px;
+}
+
+.SobiPro .spEditImagePreview img {
+	margin: 8px;
+}
+
+.SobiPro .spImageField input[type='checkbox'] {
+	margin: 5px;
+}
+
+.SobiPro .spdFileUpload .alert,
+.SobiPro .spImageUpload .alert {
+	margin-top: 5px;
+}
+
+.SobiPro .spImageField .span2 {
+	width: 80px;
+}
+
+.SobiPro .spImageField label {
+	display: inline-block;
+}
+
+.SobiPro .disabledArea {
+	opacity: 0.3;
+	cursor:progress;
+}
+.SobiPro .disabledArea a {
+	cursor:progress;
+}
