(#) Size of News container corrected

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -769,6 +769,7 @@ fieldset label {
   margin-bottom: 10px;
   min-height: 90px;
   padding: 5px;
+  overflow: hidden;
 }
 .SobiPro .spNews .SpCellContainer img {
   padding-right: 10px;
