last RSS corrections and styling; URLs to our site corrected

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -774,6 +774,10 @@ fieldset label {
 .SobiPro .spNews .SpCellContainer img {
   padding-right: 10px;
 }
+.SpCellNewsImage {
+  float: left;
+}
+
 .SobiPro td.SpCellIssueMsg {
   padding-top: 11px;
 }
